Bug 154256 - DIMAP with GMail causes crash
Summary: DIMAP with GMail causes crash
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: disconnected IMAP (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-18 00:00 UTC by Ryan Winter
Modified: 2007-12-21 15:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Winter 2007-12-18 00:00:54 UTC
Version:            (using KDE KDE 3.97.0)
Installed from:    Compiled From Sources
OS:                Linux

I have added gmail to kmail using the DIMAP protocol. All seems ok, but after downloading about 25 messages, the download process stalls.

I then closed kmail and launched it again, which results in an application crash. I will try to recompile the application with debug so I can post a stack.
Comment 2 Ryan Winter 2007-12-21 08:37:57 UTC
Below is the backtrace for the crash. I'll try and do some investigation into what is happening.

--

Program terminated with signal 6, Aborted.
#0  0xb7f2e410 in __kernel_vsyscall ()
(gdb) bt
#0  0xb7f2e410 in __kernel_vsyscall ()
#1  0x44f9fae1 in raise () from /lib/libc.so.6
#2  0x44fa12c8 in abort () from /lib/libc.so.6
#3  0x44f99185 in __assert_fail () from /lib/libc.so.6
#4  0xb7a6d6d3 in KMKernel::iCalIface (this=0xbfdcfb4c)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmkernel.cpp:2061
#5  0xb7a3d49d in KMFolderCachedImap::readConfig (this=0x81c49e8)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfoldercachedimap.cpp:261
#6  0xb7967874 in KMFolder (this=0x81be9c0, aParent=0x81bf3a8, aFolderName=@0xbfdcf6d4,
    aFolderType=KMFolderTypeCachedImap, withIndex=true, exportedSernums=true)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfolder.cpp:140
#7  0xb79a7ee0 in KMFolderDir::reload (this=0x81bf3a8)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfolderdir.cpp:242
#8  0xb79a7806 in KMFolderDir::reload (this=0x81c5304)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfolderdir.cpp:288
#9  0xb79aadfe in KMFolderMgr::setBasePath (this=0x81c52f8, aBasePath=@0xbfdcfad0)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfoldermgr.cpp:169
#10 0xb79ab1ce in KMFolderMgr (this=0x81c52f8, aBasePath=@0xbfdcfad0, dirType=KMDImapDir)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmfoldermgr.cpp:43
#11 0xb7a7a69b in KMKernel::init (this=0xbfdcfb4c)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/kmkernel.cpp:1398
#12 0x0804ac6c in main (argc=Cannot access memory at address 0xe7b
)
    at /var/tmp/portage/kde-base/kmail-3.97.0/work/kmail-3.97.0/kmail/main.cpp:111
#13 0x44f8c9bc in __libc_start_main () from /lib/libc.so.6
#14 0x08049ee1 in _start ()
Comment 3 Thomas McGuire 2007-12-21 15:22:34 UTC
SVN commit 751262 by tmcguire:

Create the groupware interface in the kernel constructor, and
only delay the D-Bus registration until KMKernel::setupDBus()
is called.

This is needed because KMFolderCachedImap::readConfig accesses
the groupware interface, and it is called before setupDBus().

This probably fixes
BUG: 154256



 M  +5 -1      kmailicalifaceimpl.cpp  
 M  +10 -0     kmailicalifaceimpl.h  
 M  +2 -1      kmkernel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751262