Create the groupware interface in the kernel constructor, and only delay the D-Bus registration until KMKernel::setupDBus() is called.

This is needed because KMFolderCachedImap::readConfig accesses
the groupware interface, and it is called before setupDBus().

This probably fixes
BUG: 154256


svn path=/trunk/KDE/kdepim/; revision=751262